--- a/Geoquiz/app/src/main/res/layout/activity_quiz.xml
+++ b/Geoquiz/app/src/main/res/layout/activity_quiz.xml
@@ -10,7 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,5 +29,11 @@
             android:text="@string/false_button" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button" />
 
 </LinearLayout>
