--- a/Geoquiz/app/src/main/res/layout/activity_quiz.xml
+++ b/Geoquiz/app/src/main/res/layout/activity_quiz.xml
@@ -7,9 +7,10 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
+        android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
