--- a/Geoquiz/app/src/main/res/layout/activity_quiz.xml
+++ b/Geoquiz/app/src/main/res/layout/activity_quiz.xml
@@ -1,10 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/question_text_view"
@@ -39,4 +37,4 @@
         android:drawableRight="@drawable/arrow_right"
         android:drawablePadding="4dp"/>
 
-</LinearLayout>
+</FrameLayout>
